<resources>
    <string name="app_name">Instagram</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="description">Description</string>
    <string name="takepicture">TakePicture</string>
    <string name="button">Button</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compose"></string>
    <string name="home"></string>
    <string name="profile"></string>

</resources>