<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/bg">

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="76dp"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColorHint="@color/transparent"
        android:background="@drawable/etbg"/>

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:layout_marginStart="120dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="0dp"
        android:text="@string/take_picture" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="242dp"
        android:contentDescription="@string/todo"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPostImage"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:text="@string/submit" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="315dp"
        android:text="@string/logout" />

</RelativeLayout>