<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="214dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="101dp"
        android:src="@drawable/nux_dayone_landing_logo"
        tools:srcCompat="@drawable/nux_dayone_landing_logo" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="262dp"
        android:background="@drawable/etbg"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColorHint="@color/transparent"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_alignParentStart="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textColorHint="@color/transparent"
        android:background="@drawable/etbg"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="328dp"
        android:layout_height="60dp"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="13dp"
        android:text="@string/login" />



</RelativeLayout>
