<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/tvUsername"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="145dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:textColor="@color/black"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivImage"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="42dp"
        tools:text="@string/description" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="22dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="350dp"
        app:srcCompat="@drawable/direct" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="22dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="350dp"
        app:srcCompat="@drawable/ufi_comment" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="22dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="350dp"
        app:srcCompat="@drawable/liked_selector" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="22dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="379dp"
        android:layout_marginTop="350dp"
        app:srcCompat="@drawable/ufi_save_active" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="385dp"
        android:layout_marginTop="3dp"
        android:rotation="90"
        app:srcCompat="@drawable/ufi_more" />

</RelativeLayout>